Fix skills formatting being broken in pdf

--- a/src/css/pdf.css
+++ b/src/css/pdf.css
@@ -129,6 +129,11 @@ h2.text-center {
     padding-top: 10px !important;
 }
 
+.skill-text {
+    /* Hacky */
+    width: 70px;
+}
+
 .skill-ref {
     display: none;
 }
@@ -156,5 +161,5 @@ h2.text-center {
 }
 
 .print-skill-do-columns tr td:last-of-type {
-    float: right;
+    /*float: right;*/
 }
